# argo-workflow

./: .gitignore  ARGO_INSTALLATION.md  AWS_EKS_SETUP.md  BUNNYSHELL_CLI_DEPLOYMENT.md  BUNNYSHELL_DEPLOYMENT.md  CONTAINERD_EXPLANATION.md  CONTAINERD_VERSION_REQUIREMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_SUMMARY.md  DEVELOPER.md  DEVOPS.md  EXTERNAL_K8S_INTEGRATION.md  KUBELET_EXPLANATION.md  LICENSE  LOGS_EXPLANATION.md  Makefile  PR_DESCRIPTION.md  README.md  TESTING_START_HERE.md  UPGRADE_MACHINE1.md  USER.md  bunnyshell.yaml  diagnose-nix-portable.sh  docker-compose.env.example  docker-compose.yaml  machine1-diagnostics-after-docker-update.txt  machine1-diagnostics.txt  machine2-diagnostics.txt
.bunnyshell/: bunnyshell.yaml
apps/backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  GRADUAL_ROLLOUT_GUIDE.md  TROUBLESHOOTING.md  pyproject.toml  run_dev.sh
apps/backend/app/: README_HERA_POC.md  database.py  main.py  workflow_hera.py  workflow_hera_comparison.md  workflow_hera_flow.py  workflow_hera_integration_example.py  workflow_hera_poc.py
apps/backend/tests/: README.md  quick_test.sh  test_hera_integration.py  test_workflow_comparison.sh
changes/: PR_AWS_EKS_SUPPORT.md  PR_DESCRIPTION.md  PR_HERA_SDK_ANALYSIS.md  PR_HERA_SDK_INTEGRATION.md  PR_HERA_SDK_POC_SUMMARY.md  PR_HERA_SDK_TESTING_COMPLETE.md  PR_NIX_UV_CACHE_OPTIMIZATION.md  PR_PV_AND_DEPS.md  PR_PV_FILE_MANAGER.md  PR_TASK_RUN_HISTORY.md
docs/: CACHE_VERIFICATION.md  CONTAINER_COLD_START_OPTIMIZATION_ANALYSIS.md  DAG_IMPLEMENTATION_RECOMMENDATION.md  (+9 more)
(+54 files in other folders)
