[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.9,<4"
dependencies = [
    "fastapi>=0.100.0", "uvicorn[standard]>=0.23.0", "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0", "kubernetes>=28.0.0", "argo-workflows>=3.4.0",
    "pydantic>=2.0.0", "pyyaml>=6.0.1", "python-multipart>=0.0.6",
    "hera-workflows>=5.0.0"
]
